Lint JS & fix typo